terraform/modules/ec2/main.tf
resource "aws_security_group" "web_sg" {
  name        = "web-security-group"
  description = "Allow SSH and HTTP"

  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web" {

  ami           = var.ami_id
  instance_type = var.instance_type

  key_name  = var.key_name
  subnet_id = var.subnet_id

  iam_instance_profile = var.instance_profile_name

  vpc_security_group_ids = [
    aws_security_group.web_sg.id
  ]

  user_data = var.user_data

  tags = {
    Name = var.instance_name
  }
}
